--- a/musicsuit_rf24/Makefile
+++ b/musicsuit_rf24/Makefile
@@ -9,7 +9,8 @@ PROJECT_DIR       = $(CURDIR)
 ### Path to where the your project's libraries are stored.
 USER_LIB_PATH    :=  $(ARDUINO_DIR)/libraries
 
-BOARD_TAG         = micro
+#BOARD_TAG         = micro
+BOARD_TAG       = nano328
 
 MONITOR_BAUDRATE  = 115200
 
@@ -21,7 +22,8 @@ CFLAGS_STD        = -std=gnu11
 ### Set the C++ standard to be used during compilation. Documentation (https://github.com/WeAreLeka/Arduino-Makefile/blob/std-flags/arduino-mk-vars.md#cxxflags_std)
 CXXFLAGS_STD      = -std=gnu++11
 CXXFLAGS         += -w
-MONITOR_PORT      = /dev/ttyACM*
+#MONITOR_PORT      = /dev/ttyACM*
+MONITOR_PORT    = /dev/ttyUSB0
 
 ### -pedantic  -Wextra
 
